--- a/src/main.css
+++ b/src/main.css
@@ -292,3 +292,35 @@ body {
     width: 200px;
   }
 }
+
+.edit-form {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+.edit-inputs {
+  display: flex;
+  gap: 1rem;
+  justify-content: center;
+}
+
+.edit-inputs input {
+  padding: 5px;
+  font-size: 1rem;
+}
+
+.edit-buttons {
+  display: flex;
+  gap: 1rem;
+  justify-content: center;
+}
+
+.edit-buttons button {
+  padding: 8px 24px;
+  font-size: 1rem;
+  font-weight: bold;
+  border: 2px solid #00bc77;
+  background-color: white;
+  color: #00bc77;
+  min-width: 15ch;
+}
